# LearningAssistant

./: CMakeLists.txt  articleextractor.h  controllertts.cpp  controllertts.h  main.cpp  mainwindow.cpp  mainwindow.h  networkmodel.cpp  networkmodel.h  pcmbufferdevice.cpp  pcmbufferdevice.h  piperttsservice.cpp  piperttsservice.h  resources.qrc  tsconfig.json  ttsviewmodel.cpp  ttsviewmodel.h
.github/workflows/: windows-qt-release.yml
js/: extract_article.js  extract_article.ts
